@@ -7,12 +7,14 @@ import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -32,7 +34,7 @@ public class JwtFilter extends OncePerRequestFilter {
 
             // МЫ ПРОСТО ВЕРИМ ТОКЕНУ И ГОВОРИМ SPRING: "ВСЁ ОК, ЭТО ЮЗЕР С ТАКИМ EMAIL"
             UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
-                    email, null, Collections.emptyList()
+                    email, null, List.of(new SimpleGrantedAuthority("ROLE_USER"))
             );
 
             SecurityContextHolder.getContext().setAuthentication(auth);
